--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ http://www.templatemo.com/tm-406-flex
                             <ul class="social-icons">
                                 <li><a href="#" class="fa fa-facebook"></a></li>
                                 <li><a href="#" class="fa fa-twitter"></a></li>
-                                <li><a href="#" class="fa fa-dribbble"></a></li>
+                                <li><a href="#" class="fa fa-instagram"></a></li>
                             </ul>
                         </div> <!-- /.col-md-12 -->
                     </div> <!-- /.row -->
