Se modificó la linea 52

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ http://www.templatemo.com/tm-406-flex
                                 <div class="col-md-10 col-sm-10 main-menu text-right">
                                     <div class="toggle-menu visible-sm visible-xs"><i class="fa fa-bars"></i></div>
                                     <ul class="menu-first">
-                                        <li class="active"><a href="#">PRINCIPAL</a></li>
+                                        <li class="active"><a href="#">PÁGINA PRINCIPAL</a></li>
                                         <li><a href="#services">¿QUIENES SOMOS?</a></li>
                                         <li><a href="#portfolio">SERVICIOS</a></li>
                                         <li><a href="#our-team">TALLERES</a></li>
